[package]
name = "mailrelay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
bincode = "1.3.3"
diesel = { version = "2.0.2", features = ["sqlite"] }
rusqlite = { version = "0.28.0", features = ["blob"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
